--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							return;
 						}
 					}
-					for (var i=idx+1; i<positions.length; i++) {
+					for (var i=0; i<positions.length; i++) {
 						if (positions[idx].addr == positions[i].addr) {
 							title = title + " " + positions[i].title;
 							count++;
