--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						}
 					}
 					for (var i=0; i<positions.length; i++) {
-						if (positions[idx].addr == positions[i].addr) {
+						if (idx != i && positions[idx].addr == positions[i].addr) {
 							title = title + " " + positions[i].title;
 							count++;
 						}
