--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					}
 					var titleArr = title.split(' ');
 					if (titleArr.length > 1) {
-						etc = " 외 " + titleArr.length-1 + "곳";
+						etc = " 외 " + (titleArr.length)-1 + "곳";
 					}
 
 					var marker = new daum.maps.Marker({
