--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 										'       </div>' +
 										'       <div class="body">' +
 										'          <div class="img">' +
-										'               <img src="img/' + positions[i].title + '.jpg" onclick="popUp(' + positions[i].title + ')" width="286px" height="200px">' +
+										'               <img src="img/' + positions[i].content + '.jpg" onclick="popUp(\'' + positions[i].content + '\')" width="286px" height="200px">' +
 										'          </div>' +
 										'          <div class="desc">' +
 										'               <div class="ellipsis">' + positions[i].addr + '</div>' +
