--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>PlaceMarker</title>
+	<title>MapMarker</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
